# PatientPunk

./: .env.example  .gitignore  README.md  SKILL.md  TODO.md  conftest.py  load_db.py  pyproject.toml  requirements_app.txt  research_assistant.md  schema.sql  schema_diagram_v5.html
.claude/: settings.local.json
Presentation/: DIAGRAM.md  EXPLAINER.md
Scrapers/: .gitignore  CONTRIBUTING.md  PatientPunk_Operationalization_Pipeline_Diagram.html  README.md  SCRAPER_HELP.md  corpus_metadata.json  requirements.txt  scrape_corpus.py  transform_arctic_shift.py
analysis_scripts/: expand_reports.py
data_RCT_historical_validation/: README.md  _build_paper_figures.py
database_creation/: README.md  canonicalize.py  classify_sentiment.py  extract_mentions.py  intervention_config.py  utilities.py
demographic_extraction/: .gitignore  README.md  conftest.py  main.py
docs/: DATA_NOTES.md  MVP_PLAN.md  ldn_notes.md
notebooks/: 1_treatment_overview.ipynb  2_treatment_comparison_pots.ipynb  3_microdosing_outcomes.ipynb  4_fatigue_treatments.ipynb  4_pots_multiprong_treatment.ipynb  5_fatigue_treatments.ipynb  5_pssd_treatment_outcomes.ipynb  6_pssd_recovery.ipynb  6_pssd_treatment_outcomes.ipynb  7_abortion_recovery.ipynb  7_pssd_recovery.ipynb  8_abortion_recovery.ipynb  RESEARCH_OVERVIEW.md  RESEARCH_QUESTIONS.md  _build_8_negative_predictors.py  build_notebook.py  profile_db.py
output/: corpus_metadata.json  subreddit_posts.json
outputs/: tagged_mentions.json
reddit_posts_only/: subreddit_posts.json
reddit_sample_data/: build_comparison.py  demographics.csv  (+3 more)
(+277 files in other folders)
