[project]
name = "patientpunk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.18.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["Scrapers/demographic_extraction/tests"]
