[project]
name = "patientpunk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.18.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "scipy>=1.12",
    "pandas>=2.1",
    "statsmodels>=0.14",
    "lifelines>=0.29",
    "causalinference>=0.1",
    "pingouin>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
ui = [
    "voila>=0.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.pytest.ini_options]
testpaths = ["variable_extraction/tests", "tests", "Scrapers/demographic_extraction/tests"]
