[project]
name = "patientpunk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.18.0",
    "causalinference>=0.1",
    "lifelines>=0.27",
    "numpy>=1.26",
    "pandas>=2.1",
    "pingouin>=0.5",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "scipy>=1.12",
    "statsmodels>=0.14",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "Scrapers/demographic_extraction/tests"]
